k8s/nginx-ingress-envoy-sidecar/userservice.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: admin-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: userservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          
          # [NEW] The Envoy Sidecar Container
        - name: envoy
          image: envoyproxy/envoy:v1.25-latest
          ports:
            - containerPort: 10000
            - containerPort: 9901
          volumeMounts:
            - name: envoy-config-vol
              mountPath: /etc/envoy

      # [NEW] Volume definition for the ConfigMap
      volumes:
        - name: envoy-config-vol
          configMap:
            name: envoy-config-userservice
