k8s/nginx-ingress-envoy-sidecar/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-app-ingress
  namespace: admin-app
spec:
  ingressClassName: nginx
  rules:
    - host: adminapp.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-gui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080
